--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Programacion para Internet</title>
+    <script type="text/javascript" src="js/phaser.min.js"></script>
+    <title> Practica de javascrip </title>
 </head>
 <body>
+
+<div id="area"></div>
+<script src="js/main.js"></script>
+
+
 
 </body>
 </html>
